# ytdl

./: Dockerfile  index.html  main.py  models.py  pyproject.toml  services.py  test.http
docs/: minio.md  yt-dlp.md
